<resources>

  <string name="app_name">Uplift</string>

  <string name="elevation_label">Elevation</string>
  <string name="elevation_value">%ddp</string>
  <string name="x_scale_label">Scale X</string>
  <string name="x_scale_value">%d%%</string>
  <string name="y_scale_label">Scale Y</string>
  <string name="y_scale_value">%d%%</string>
  <string name="y_shift_label">Shift Y</string>
  <string name="y_shift_value">%ddp</string>

  <string name="drag_up_and_down">Drag up and down</string>
  <string name="use_controls_below">Use controls below</string>
  <string name="tweak_shadow">Shadow controls</string>
  <string name="shadow_color_label">Shadow color (Android P+ only)</string>
  <string name="shadow_ambient_color_label">Ambient</string>
  <string name="shadow_spot_color_label">Spot</string>
  <string name="color_picker_title_ambient">Ambient color</string>
  <string name="color_picker_title_spot">Spot color</string>
  <string name="brightness_label">Brightness:</string>
  <string name="alpha_label">Alpha:</string>
  <string name="close">Close</string>
  <string name="menu_title_reset">Reset</string>
  <string name="menu_tooltip_reset">Reset to defaults</string>
  <string name="info_content_description">About Android P shadows tinting</string>

  <string name="elevation_tinting_title">Elevation tinting</string>
  <string name="elevation_tinting_blurb"><![CDATA[<p>On Android P and later, it is possible to tint the elevation shadows using two new APIs.</p>
    <p>The effective alpha of the shadow is determined by multiplying the alpha component of the specified colours by the alpha factor defined by
    the <code>android:ambientShadowAlpha</code> and <code>android:spotShadowAlpha</code> attributes.</p>
    <p>The default values as of API 28 are <code>ambientShadowAlpha = 0.039</code> (3.9%) and <code>spotShadowAlpha = 0.19</code> (19%). For TV
    devices the values are <code>0.15</code> and <code>0.3</code> respectively.</p>
    <p>This app is cheating by setting both shadow alpha values to <code>1</code> (fully opaque) so the shadow opacity can be controlled at runtime
    just by varying the shadow colours’ alphas.</p>]]></string>
  <string name="loading">Loading…</string>
  <string name="learn_more">Learn more</string>
  <string name="onboarding_tooltip">Drag up to reveal controls</string>

</resources>
