<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="@dimen/panel_content_margin">

  <TextView
    android:id="@+id/elevationLabel"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/match_constraint"
    android:text="@string/elevation_label"
    android:textAppearance="@style/TextAppearance.Uplift.SeekBarLabel"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/elevationValue"
    app:layout_constraintBottom_toBottomOf="@+id/elevationValue" />

  <TextView
    android:id="@+id/elevationValue"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/elevation_value"
    android:textAppearance="@style/TextAppearance.Uplift.SeekBarValue"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="10dp" />

  <SeekBar
    android:id="@+id/elevationBar"
    style="@style/Widget.Uplift.SeekBar"
    android:layout_width="@dimen/match_constraint"
    android:layout_height="@dimen/seekbar_height"
    android:layout_marginTop="@dimen/value_label_margin_bottom"
    android:max="@integer/max_elevation_progress"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/elevationValue"
    app:layout_constraintEnd_toEndOf="parent"
    tools:progress="10" />

  <TextView
    android:id="@+id/xScaleLabel"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/match_constraint"
    android:text="@string/x_scale_label"
    android:textAppearance="@style/TextAppearance.Uplift.SeekBarLabel"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/xScaleValue"
    app:layout_constraintBottom_toBottomOf="@+id/xScaleValue" />

  <TextView
    android:id="@+id/xScaleValue"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/seekbar_margin_bottom"
    android:text="@string/x_scale_value"
    android:textAppearance="@style/TextAppearance.Uplift.SeekBarValue"
    app:layout_constraintTop_toBottomOf="@+id/elevationBar"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="100%" />

  <SeekBar
    android:id="@+id/xScaleBar"
    style="@style/Widget.Uplift.SeekBar"
    android:layout_width="@dimen/match_constraint"
    android:layout_height="@dimen/seekbar_height"
    android:layout_marginTop="@dimen/value_label_margin_bottom"
    android:max="@integer/max_scale_x_progress"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/xScaleValue"
    app:layout_constraintEnd_toEndOf="parent"
    tools:progress="100" />

  <TextView
    android:id="@+id/yScaleLabel"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/match_constraint"
    android:text="@string/y_scale_label"
    android:textAppearance="@style/TextAppearance.Uplift.SeekBarLabel"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/yScaleValue"
    app:layout_constraintBottom_toBottomOf="@+id/yScaleValue" />

  <TextView
    android:id="@+id/yScaleValue"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/seekbar_margin_bottom"
    android:text="@string/y_scale_value"
    android:textAppearance="@style/TextAppearance.Uplift.SeekBarValue"
    app:layout_constraintTop_toBottomOf="@+id/xScaleBar"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="100%" />

  <SeekBar
    android:id="@+id/yScaleBar"
    style="@style/Widget.Uplift.SeekBar"
    android:layout_width="@dimen/match_constraint"
    android:layout_height="@dimen/seekbar_height"
    android:layout_marginTop="@dimen/value_label_margin_bottom"
    android:max="@integer/max_scale_y_progress"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/yScaleValue"
    app:layout_constraintEnd_toEndOf="parent"
    tools:progress="100" />

  <TextView
    android:id="@+id/yShiftLabel"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/match_constraint"
    android:text="@string/y_shift_label"
    android:textAppearance="@style/TextAppearance.Uplift.SeekBarLabel"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/yShiftValue"
    app:layout_constraintBottom_toBottomOf="@+id/yShiftValue" />

  <TextView
    android:id="@+id/yShiftValue"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/seekbar_margin_bottom"
    android:text="@string/y_shift_value"
    android:textAppearance="@style/TextAppearance.Uplift.SeekBarValue"
    app:layout_constraintTop_toBottomOf="@+id/yScaleBar"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="0dp" />

  <SeekBar
    android:id="@+id/yShiftBar"
    style="@style/Widget.Uplift.SeekBar"
    android:layout_width="@dimen/match_constraint"
    android:layout_height="@dimen/seekbar_height"
    android:layout_marginTop="@dimen/value_label_margin_bottom"
    android:max="@integer/max_shift_y_progress"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/yShiftValue"
    app:layout_constraintEnd_toEndOf="parent"
    tools:progress="100" />

  <TextView
    android:id="@+id/shadowColorLabel"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/match_constraint"
    android:layout_marginTop="@dimen/seekbar_margin_bottom"
    android:text="@string/shadow_color_label"
    android:textAppearance="@style/TextAppearance.Uplift.SeekBarLabel"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/yShiftBar" />

  <me.seebrock3r.elevationtester.ColorView
    android:id="@+id/ambientColor"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/value_label_margin_bottom"
    android:text="@string/shadow_ambient_color_label"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/shadowColorLabel"
    app:layout_constraintEnd_toStartOf="@id/pointColor"
    app:layout_constraintHorizontal_chainStyle="spread"
    tools:color="#f00" />

  <me.seebrock3r.elevationtester.ColorView
    android:id="@+id/pointColor"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/shadow_point_color_label"
    app:layout_constraintStart_toEndOf="@id/ambientColor"
    app:layout_constraintTop_toTopOf="@id/ambientColor"
    app:layout_constraintEnd_toEndOf="parent"
    tools:color="#0f0" />

</androidx.constraintlayout.widget.ConstraintLayout>
